--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.4",
     "supports-color": "^9.4.0"
