--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "supports-color": "^9.4.0"
   }
 }
